initial file reset to 100 samples

--- a/notebooks/understanding_supervised_learning.ipynb
+++ b/notebooks/understanding_supervised_learning.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# Read data\n",
     "\n",
-    "file = '../data/baseball_1K_ko.csv'\n",
+    "file = '../data/baseball_100_ok.csv'\n",
     "data = pd.read_csv(file)\n",
     "data.head()"
    ]
