--- a/notebooks/model_performance.ipynb
+++ b/notebooks/model_performance.ipynb
@@ -20,8 +20,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import RobustScaler, StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.preprocessing import OrdinalEncoder"
+    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import roc_auc_score"
    ]
   },
   {
@@ -31,6 +34,7 @@
    "outputs": [],
    "source": [
     "# Categorical data analyser\n",
+    "\n",
     "def cat_var(df, cols):\n",
     "    '''\n",
     "    Return: a Pandas dataframe object with the following columns:\n",
@@ -55,17 +59,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Netflix dataset\n",
+    "## Scaling\n",
     "\n",
-    "netflix = pd.read_csv('../data/netflix_titles.csv')\n",
-    "col_netflix = list(netflix_titles.columns)\n",
-    "print(netflix.shape)\n",
-    "netflix.head()"
+    "Some ML algorithms have problems performing well whenever the data scale differ greatly between features. In those cases scaling the data is your best option.\n",
+    "\n",
+    "- [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html#sklearn.preprocessing.RobustScaler)\n",
+    "\n",
+    "- [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html#sklearn.preprocessing.StandardScaler)\n",
+    "\n",
+    "<img src=\"../images/scaling.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
    ]
   },
   {
@@ -74,20 +79,147 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_netflix = cat_var(netflix, col_netflix)\n",
-    "cat_netflix"
+    "# Weather dataset\n",
+    "\n",
+    "weather = pd.read_csv('../data/weatherAUS.csv')\n",
+    "print(weather.shape)\n",
+    "weather.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "num_netflix = netflix.describe()\n",
-    "num_netflix"
+    "# Uluru weather (numerical features)\n",
+    "\n",
+    "weather = weather[weather['Location'].isin(['Uluru'])].reset_index(drop=True)\n",
+    "weather = weather[weather['RainToday'].isin(['No','Yes'])].reset_index(drop=True)\n",
+    "weather = weather[weather['RainTomorrow'].isin(['No','Yes'])]\n",
+    "weather = weather[['MinTemp',\n",
+    "                   'MaxTemp',\n",
+    "                   'Rainfall',\n",
+    "                   'WindSpeed9am',\n",
+    "                   'WindSpeed3pm',\n",
+    "                   'Humidity9am',\n",
+    "                   'Humidity3pm',\n",
+    "                   'Pressure9am',\n",
+    "                   'Pressure3pm',\n",
+    "                   'Temp9am',\n",
+    "                   'Temp3pm',\n",
+    "                   'RainTomorrow']]\n",
+    "weather = weather.dropna().reset_index(drop=True)\n",
+    "col_weather = list(weather.columns)\n",
+    "print(col_weather)\n",
+    "print(weather.shape)\n",
+    "print(weather.describe())\n",
+    "weather.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Features + target\n",
+    "\n",
+    "X = weather[['MinTemp',\n",
+    "          'MaxTemp',\n",
+    "          'Rainfall',\n",
+    "          'WindSpeed9am',\n",
+    "          'WindSpeed3pm',\n",
+    "          'Humidity9am',\n",
+    "          'Humidity3pm',\n",
+    "          'Pressure9am',\n",
+    "          'Pressure3pm',\n",
+    "          'Temp9am',\n",
+    "          'Temp3pm']]\n",
+    "y = pd.get_dummies(weather['RainTomorrow'], drop_first=True)['Yes']\n",
+    "print(X.shape,y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train + test\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "print(f\"X_train: {X_train.shape}, X_test: {X_test.shape}, y_train: {y_train.shape}, y_test: {y_test.shape}\")\n",
+    "print(f\"X_train: {type(X_train)}, X_test: {type(X_test)}, y_train: {type(y_train)}, y_test: {type(y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaling\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear model\n",
+    "\n",
+    "linear_model = LogisticRegression(max_iter=1000)\n",
+    "linear_param = linear_model.fit(X_train, y_train)\n",
+    "linear_pred = linear_model.predict(X_test)\n",
+    "linear_auc = roc_auc_score(y_test, linear_pred)\n",
+    "print(f\"Linear model AUC is: {linear_auc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensemble model\n",
+    "\n",
+    "ensemble_model = RandomForestClassifier()\n",
+    "ensemble_param = ensemble_model.fit(X_train, y_train)\n",
+    "ensemble_pred = ensemble_model.predict(X_test)\n",
+    "ensemble_auc = roc_auc_score(y_test, ensemble_pred)\n",
+    "print(f\"Linear model AUC is: {ensemble_auc}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Enconding\n",
+    "\n",
+    "ML algorithms do not support categorical data. Therefore you need to find a way to transform categorical data into numerical. You can use either __One Hot Encoding__ or __Label Encoding__...choose wisely!!!\n",
+    "\n",
+    "- [OneHotEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html#sklearn.preprocessing.OneHotEncoder)\n",
+    "\n",
+    "- [LabelEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html#sklearn.preprocessing.LabelEncoder)\n",
+    "\n",
+    "<img src=\"../images/encoding.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
    ]
   },
   {
@@ -112,6 +244,8 @@
    },
    "outputs": [],
    "source": [
+    "# Features analysis\n",
+    "\n",
     "cat_mushrooms = cat_var(mushrooms, col_mushrooms)\n",
     "cat_mushrooms"
    ]
@@ -122,22 +256,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_mushrooms = mushrooms.describe()\n",
-    "num_mushrooms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Weather dataset\n",
+    "# Features + target (encoding)\n",
     "\n",
-    "weather = pd.read_csv('../data/weatherAUS.csv')\n",
-    "col_weather = list(weather.columns)\n",
-    "print(weather.shape)\n",
-    "weather.head()"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -146,8 +273,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_weather = cat_var(weather, col_weather)\n",
-    "cat_weather"
+    "# Train + test\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -156,8 +290,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_weather = weather.describe()\n",
-    "num_weather"
+    "# Scaling\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear model\n",
+    "\n",
+    "linear_model = LogisticRegression(max_iter=1000)\n",
+    "linear_param = linear_model.fit(X_train, y_train)\n",
+    "linear_pred = linear_model.predict(X_test)\n",
+    "linear_auc = roc_auc_score(y_test, linear_pred)\n",
+    "print(f\"Linear model AUC is: {linear_auc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensemble model\n",
+    "\n",
+    "ensemble_model = RandomForestClassifier()\n",
+    "ensemble_param = ensemble_model.fit(X_train, y_train)\n",
+    "ensemble_pred = ensemble_model.predict(X_test)\n",
+    "ensemble_auc = roc_auc_score(y_test, ensemble_pred)\n",
+    "print(f\"Linear model AUC is: {ensemble_auc}\")"
    ]
   },
   {
@@ -171,11 +342,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outliers\n",
+    "## Bonus\n",
     "\n",
-    "Search for outliers within categorical and numerical data. You may use any tool you find convenient. After the analysis you must decide what to do about the outliers.\n",
+    "Now that you can grasp the potential of pre-processing your data...what would you do about the following dataset?\n",
     "\n",
-    "![Image](../images/outliers.png)"
+    "<img src=\"../images/bonus.jpg\" alt=\"Drawing\" style=\"width: 500px;\"/>"
    ]
   },
   {
@@ -184,15 +355,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Netflix outlier analysis\n",
+    "# Netflix dataset\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "netflix = pd.read_csv('../data/netflix_titles.csv')\n",
+    "col_netflix = list(netflix.columns)\n",
+    "print(netflix.shape)\n",
+    "netflix.head()"
    ]
   },
   {
@@ -201,97 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mushrooms outlier analysis\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Weather outlier analysis\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Scaling\n",
-    "\n",
-    "Some ML algorithms have problems performing well whenever the data scale differ greatly between features. In those cases scaling the data is your best option.\n",
-    "\n",
-    "- [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html#sklearn.preprocessing.RobustScaler)\n",
-    "\n",
-    "- [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html#sklearn.preprocessing.StandardScaler)\n",
-    "\n",
-    "![Image](../images/scaling.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Netflix numerical data scaling\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mushrooms numerical data scaling\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Weather numerical data scaling\n",
+    "# ML workflow\n",
     "\n",
     "\n",
     "\n",
@@ -307,72 +385,6 @@
    "metadata": {},
    "source": [
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Enconding\n",
-    "\n",
-    "ML algorithms do not support categorical data. Therefore you need to find a way to transform categorical data into numerical. You can use either __One Hot Encoding__ or __Label Encoding__...choose wisely!!!\n",
-    "\n",
-    "- [OneHotEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html#sklearn.preprocessing.OneHotEncoder)\n",
-    "\n",
-    "- [LabelEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html#sklearn.preprocessing.LabelEncoder)\n",
-    "\n",
-    "![Image](../images/encoding.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Netflix categorical data encoding\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mushrooms categorical data encoding\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Weather categorical data encoding\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   }
  ],
