dataset reference included

--- a/notebooks/model_performance.ipynb
+++ b/notebooks/model_performance.ipynb
@@ -70,6 +70,8 @@
     "\n",
     "- [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html#sklearn.preprocessing.StandardScaler)\n",
     "\n",
+    "Try both options and see what happens with performance (i.e.: AUC).\n",
+    "\n",
     "<img src=\"../images/scaling.png\" alt=\"Drawing\" style=\"width: 500px;\"/>"
    ]
   },
@@ -79,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Weather dataset\n",
+    "# Weather dataset (https://www.kaggle.com/jsphyg/weather-dataset-rattle-package)\n",
     "\n",
     "weather = pd.read_csv('../data/weatherAUS.csv')\n",
     "print(weather.shape)\n",
@@ -213,7 +215,7 @@
    "source": [
     "## Enconding\n",
     "\n",
-    "ML algorithms do not support categorical data. Therefore you need to find a way to transform categorical data into numerical. You can use either __One Hot Encoding__ or __Label Encoding__...choose wisely!!!\n",
+    "ML algorithms do not support categorical data. Therefore you need to find a way to transform categorical data into numerical. You must compare the results using both techniques: __One Hot Encoding__ or __Label Encoding__\n",
     "\n",
     "- [OneHotEncoder](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html#sklearn.preprocessing.OneHotEncoder)\n",
     "\n",
@@ -228,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mushrooms dataset\n",
+    "# Mushrooms dataset (https://www.kaggle.com/uciml/mushroom-classification)\n",
     "\n",
     "mushrooms = pd.read_csv('../data/mushrooms.csv')\n",
     "col_mushrooms = list(mushrooms.columns)\n",
@@ -256,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Features + target (encoding)\n",
+    "# Features + target (encoding). IMPORTANT: you may pick any of the 2-labeled features as you target (choose wisely!!!)\n",
     "\n",
     "\n",
     "\n",
@@ -355,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Netflix dataset\n",
+    "# Netflix dataset (https://www.kaggle.com/shivamb/netflix-shows)\n",
     "\n",
     "netflix = pd.read_csv('../data/netflix_titles.csv')\n",
     "col_netflix = list(netflix.columns)\n",
@@ -369,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ML workflow\n",
+    "# ML workflow -> ¿what would you do?\n",
     "\n",
     "\n",
     "\n",
